[package]
name = "brickbreaker-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "^0.13.1", features = ["dynamic_linking"] }
bevy_rapier2d = "^0.25.0"
leafwing-input-manager = "^0.13.3"
bevy-inspector-egui = "^0.23.4"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
